--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/core/css/preflight.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/core/css/preflight.css
@@ -1,4 +1,5 @@
 /* Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved. 2023 */
 /* SPDX-License-Identifier: Apache-2.0 */
-@import '../../../../node_modules/modern-normalize/modern-normalize.css';
-@import './colors.css';
+@import 'modern-normalize/modern-normalize.css';
+@import 'uswds/dist/css/css/uswds.css'
+/* @import './colors.css'; */
