--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/layouts/HeaderLayout/components/Logo/styles.module.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/layouts/HeaderLayout/components/Logo/styles.module.css
@@ -1,9 +1,8 @@
 /* Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved. 2023 */
 /* SPDX-License-Identifier: Apache-2.0 */
 .root {
+  --logo-color: var(--text-layer-1-primary);
   box-sizing: content-box;
-  color: var(--icon-color);
+  color: var(--logo-color);
   width: 160rem;
-  height: 100%;
-  padding: 0 20px;
 }
