--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/layouts/HeaderLayout/components/UserMenu/styles.module.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/layouts/HeaderLayout/components/UserMenu/styles.module.css
@@ -1,85 +1,90 @@
 /* Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved. 2023 */
 /* SPDX-License-Identifier: Apache-2.0 */
 .root {
+  --trigger-background-color: var(--background-layer-1);
+  --trigger-background-hover-color: var(--background-layer-1-hover);
+  --trigger-background-active-color: var(--background-layer-1-active);
+  --trigger-text-color: var(--text-layer-1-primary);
+  --trigger-text-secondary-color: var(--text-layer-1-secondary);
+  --trigger-text-hover-color: var(--text-layer-1-hover);
+  --trigger-text-active-color: var(--text-layer-1-active);
+  --health-color: var(--color-alarm-unknown);
+  --transition-background-color: background-color var(--transition-duration) var(--transition-easing);
+  --transition-color: color var(--transition-duration) var(--transition-easing);
+  --transition-rotation: rotate calc(var(--transition-duration) * .3) var(--transition-easing);
   position: relative;
+  display: grid;
 }
 
 .trigger {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  height: 100%;
-  padding: 0 20px;
-  cursor: pointer;
-  background-color: var(--background-color);
-  transition: var(--transition);
+  display: grid;
+  place-items: center;
+  grid-auto-flow: column;
+  column-gap: 10rem;
+  padding: 10rem 15rem;
+  background-color: var(--trigger-background-color);
+  border-radius: var(--radius-10);
+  color: var(--trigger-text-color);
+  transition: var(--transition-background-color);
 }
 
 .trigger:hover {
-  --background-color: var(--background-hover-color);
-  --icon-color: var(--icon-hover-color);
-  --text-color: var(--text-hover-color);
+  --trigger-background-color: var(--trigger-background-hover-color);
+  --trigger-text-color: var(--trigger-text-hover-color);
+  --trigger-text-secondary-color: var(--trigger-text-hover-color);
 }
 
-.triggerActive {
-  --background-color: var(--background-hover-color);
-  --icon-color: var(--icon-hover-color);
-  --text-color: var(--text-hover-color);
+.trigger[data-active=true] {
+  --trigger-background-color: var(--trigger-background-hover-color);
+  --trigger-text-color: var(--trigger-text-hover-color);
+  --trigger-text-secondary-color: var(--trigger-text-hover-color);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  z-index: calc(var(--z-index-max) + 1);
 }
 
-.triggerActive>.triggerIcon {
+.trigger[data-active=true]>.triggerArrow {
   rotate: 180deg;
 }
 
-.triggerIcon {
-  display: flex;
-  width: 13rem;
-  height: 13rem;
-  color: var(--icon-color);
-  transition: var(--transition);
+.triggerAvatar {
+  --size: 26rem;
+  width: var(--size);
+  height: var(--size);
+  transition: var(--transition-color);
 }
 
-.menuItemName {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 3px;
-  font-size: 14rem;
-  font-weight: 500;
-  letter-spacing: 0;
-  line-height: 1;
-  color: var(--menu-item-text-color);
+.triggerGroup {
+  display: grid;
+  place-items: center start;
+  translate: 0 -1rem;
 }
 
-.icon {
-  display: flex;
-  width: 26rem;
-  height: 26rem;
-  color: var(--icon-color);
-  transition: var(--transition);
-}
-
-.group {
-  position: relative;
-  top: -1px;
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-}
-
-.name {
+.triggerName {
   font-size: 15rem;
-  font-weight: 500;
-  line-height: 1;
-  color: var(--text-color);
-  transition: var(--transition);
+  transition: var(--transition-color);
 }
 
-.title {
+.triggerTitle {
+  color: var(--trigger-text-secondary-color);
   font-size: 12rem;
-  font-weight: 400;
-  line-height: 1;
-  color: var(--icon-color);
-  transition: var(--transition);
+  transition: var(--transition-color);
+}
+
+.triggerArrow {
+  --size: 13rem;
+  width: var(--size);
+  height: var(--size);
+  transition: var(--transition-color), var(--transition-rotation);
+}
+
+.menu {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.menuItemLabel {
+  color: var(--menu-item-text-primary-color);
+  font-size: 15rem;
+  transition: var(--transition-color);
 }
