--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/layouts/HeaderLayout/components/menu.module.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/layouts/HeaderLayout/components/menu.module.css
@@ -1,40 +1,68 @@
-/* Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved. 2023 */
+/* Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved. 2022 */
 /* SPDX-License-Identifier: Apache-2.0 */
+@keyframes menuFade {
+  from {
+    opacity: 0;
+    scale: .97;
+  }
+
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
 .menu {
-  --menu-background-color: var(--background-hover-color);
-  --menu-border-color: var(--color-gray-54);
+  --menu-background-color: var(--background-layer-2);
+  --menu-item-background-color: transparent;
+  --menu-item-background-hover-color: var(--background-layer-2-hover);
+  --menu-item-background-selected-color: var(--background-layer-3);
+  --menu-item-text-primary-color: var(--text-layer-2-primary);
+  --menu-item-text-secondary-color: var(--text-layer-2-secondary);
+  --menu-item-text-hover-color: var(--text-layer-2-hover);
+  --menu-item-text-selected-color: var(--text-layer-3-accent);
+  --transition-background-color: background-color var(--transition-duration) var(--transition-easing);
+  --transition-border-color: border-color var(--transition-duration) var(--transition-easing);
+  --transition-color: color var(--transition-duration) var(--transition-easing);
+  top: 100%;
+  min-width: 100%;
+  width: max-content;
+  row-gap: 1rem;
+  background-color: var(--menu-background-color);
+  border-radius: var(--radius-10);
+  box-shadow: var(--box-shadow-layer-1);
+  opacity: 0;
+  animation: menuFade var(--transition-duration) forwards;
+}
+
+.menu>button:first-child .menuItem {
+  border-top: none;
+}
+
+.menu>button:last-child .menuItem {
+  border-bottom: none;
 }
 
 .menuItem {
-  --menu-item-background-color: transparent;
-  --menu-item-text-color: var(--text-color);
-  --menu-item-background-hover-color: var(--color-gray-40);
-  --menu-item-text-hover-color: var(--text-hover-color);
-  --menu-item-background-active-color: var(--color-gray-40);
-  --menu-item-text-active-color: var(--text-hover-color);
-  --menu-item-background-selected-color: var(--color-blue);
-  --menu-item-text-selected-color: var(--color-tailwind-blue-150);
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  width: 100%;
-  padding: 15px 20px;
+  display: grid;
+  place-items: center start;
+  grid-template-columns: auto 1fr;
+  gap: 10rem;
+  padding: 12rem 15rem;
   background-color: var(--menu-item-background-color);
-  transition: var(--transition);
+  color: var(--menu-item-text-primary-color);
+  transition: var(--transition-background-color), var(--transition-border-color), var(--transition-color);
 }
 
 .menuItem:hover {
   --menu-item-background-color: var(--menu-item-background-hover-color);
-  --menu-item-text-color: var(--menu-item-text-hover-color);
+  --menu-item-text-primary-color: var(--menu-item-text-hover-color);
+  --menu-item-text-secondary-color: var(--menu-item-text-hover-color);
 }
 
-.menuItem:active {
-  --menu-item-background-color: var(--menu-item-background-active-color);
-  --menu-item-text-color: var(--menu-item-text-active-color);
-}
-
-.menuItem.selected {
+.menuItem[data-selected=true] {
   --menu-item-background-color: var(--menu-item-background-selected-color);
-  --menu-item-text-color: var(--menu-item-text-selected-color);
+  --menu-item-text-primary-color: var(--menu-item-text-selected-color);
+  --menu-item-text-secondary-color: var(--menu-item-text-selected-color);
   pointer-events: none;
 }
