--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/panels/ProcessPanel/components/OverlayContent/styles.module.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/panels/ProcessPanel/components/OverlayContent/styles.module.css
@@ -2,67 +2,57 @@
 /* SPDX-License-Identifier: Apache-2.0 */
 .overlay {
   --color-alarm-bg: transparent;
-  --border-color: var(--color-alarm-unknown);
-  --border-radius-outer: 12rem;
-  --border-radius-inner: 6rem;
-  ;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  padding: 16rem;
-  background-color: var(--color-gray-46);
-  border-radius: var(--border-radius-outer);
-  box-shadow: 2rem 2rem 8rem rgb(30, 30, 30, .4);
+  --icon-color: var(--color-alarm-unknown);
+  --border-radius-outer: 10rem;
+  --border-radius-inner: 5rem;
+  display: grid;
+  width: clamp(50rem, max-content, 200rem);
+  background-color: var(--background-layer-3);
+  border: solid 1rem var(--background-layer-2-accent);
+  border-radius: var(--radius-10);
+  box-shadow: var(--box-shadow-layer-1);
   overflow: hidden;
 }
 
-.headerSection {
+.header {
   display: flex;
   align-items: center;
-  gap: 14rem;
-  padding: 0 16rem;
-  background-color: var(--color-gray-40);
-  border-radius: var(--border-radius-inner) var(--border-radius-inner) 0 0;
-  overflow: hidden;
+  gap: 13rem;
+  padding: 13rem 20rem;
 }
 
-.titleSection {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  padding: 12rem 0 14rem;
+.headerTitleSection {
+  display: grid;
+  gap: 1rem;
+  white-space: nowrap;
+}
+
+.headerTitle {
+  color: var(--text-layer-3-primary);
+  font-size: 18rem;
+  font-weight: var(--font-weight-5);
+  letter-spacing: .2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
 .headerSubtitle {
-  color: var(--color-gray-11);
-  font-size: 13rem;
-  font-weight: 400;
-}
-
-.title {
-  color: var(--color-gray-3);
-  font-size: 16rem;
-  font-weight: 500;
+  color: var(--text-layer-3-secondary);
+  font-size: 14rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .bodySection {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  gap: 2rem;
-  border-radius: 0 0 var(--border-radius-inner) var(--border-radius-inner);
-  overflow: hidden;
-}
-
-.bodySection>* {
-  background-color: var(--color-gray-51);
+  display: grid;
 }
 
 .alarmStatusIcon {
-  --border-color: var(--color-alarm-unknown);
-  color: var(--border-color);
+  --icon-color: var(--color-alarm-unknown);
   width: 20rem;
+  color: var(--icon-color);
 }
 
 .overlay.Normal .alarmStatusIconIcon {
@@ -70,22 +60,26 @@
 }
 
 .alarmMessageSection {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-auto-flow: column;
+  place-items: center start;
   gap: 6rem;
-  padding: 12rem 16rem;
-  color: var(--color-gray-3);
-  font-size: 12rem;
-  font-weight: 400;
+  padding: 13rem 20rem;
+  background-color: var(--background-layer-2);
+  border-bottom: solid 1rem var(--background-layer-2-accent);
+  color: var(--text-layer-3-primary);
+  font-size: 14rem;
+  font-weight: var(--font-weight-5);
+  letter-spacing: .2rem;
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .alarmMessageIcon {
   flex-shrink: 0;
-  color: var(--border-color);
-  width: 16rem;
+  color: var(--icon-color);
+  width: 18rem;
 }
 
 .kpis {
@@ -94,50 +88,50 @@
   display: flex;
   flex-wrap: nowrap;
   gap: var(--gap);
-  padding: 16rem;
+  padding: 13rem 20rem 15rem;
+  background-color: var(--background-layer-2);
 }
 
 .kpi {
-  --color-alarm-indicator-normal: var(--color-gray-46);
   position: relative;
 }
 
-.kpi::after {
+/* .kpi::after {
   content: '';
   position: absolute;
   width: 1rem;
   height: 100%;
   right: calc(var(--gap) * -0.5);
-  background-color: var(--color-gray-46);
+  border-right: dashed 1rem var(--text-layer-3-tertiary);
 }
 
 .kpi:last-child:after {
   display: none;
-}
-
+} */
 .kpisEmptyState {
-  padding: 14rem 16rem 16rem;
-  color: var(--color-gray-11);
-  font-size: 12rem;
-  font-weight: 400;
+  color: var(--text-layer-3-secondary);
+  font-size: 14rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .High {
-  --border-color: var(--color-alarm-high);
+  --icon-color: var(--color-alarm-high);
 }
 
 .Medium {
-  --border-color: var(--color-alarm-medium);
+  --icon-color: var(--color-alarm-medium);
 }
 
 .Low {
-  --border-color: var(--color-alarm-low);
+  --icon-color: var(--color-alarm-low);
 }
 
 .Normal {
-  --border-color: var(--color-alarm-normal);
+  --icon-color: var(--color-alarm-normal);
 }
 
 .Unknown {
-  --border-color: var(--color-alarm-unknown);
+  --icon-color: var(--color-alarm-unknown);
 }
