--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/panels/ProcessPanel/styles.module.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/panels/ProcessPanel/styles.module.css
@@ -1,18 +1,17 @@
 /* Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved. 2023 */
 /* SPDX-License-Identifier: Apache-2.0 */
 .root {
-  --panel-background-color: var(--color-gray-51);
-  --button-background-color: var(--color-gray-43);
-  --button-background-hover-color: var(--color-gray-38);
-  --button-icon-color: var(--color-gray-16);
-  --button-icon-hover-color: var(--color-gray-4);
+  /* --panel-background-color: var(--color-gray-51); */
+  --button-background-color: var(--background-layer-3);
+  --button-background-hover-color: var(--background-layer-3-hover);
+  --button-icon-color: var(--text-layer-3-secondary);
+  --button-icon-hover-color: var(--text-layer-3-hover);
+  --transition-background-color: background-color var(--transition-duration) var(--transition-easing);
+  --transition-color: color var(--transition-duration) var(--transition-easing);
   position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
   overflow: hidden;
-  user-select: none;
 }
 
 .canvasContainer {
@@ -22,39 +21,29 @@
 
 .canvas {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  inset: 0;
   z-index: 0;
 }
 
 .controls {
   position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  inset: 0 var(--padding-x) 0 auto;
+  display: grid;
+  place-content: center;
   gap: 8rem;
-  width: 40rem;
-  height: 100%;
-  top: 0;
-  right: 20rem;
-  z-index: 2;
+  z-index: var(--z-index-1);
   pointer-events: none;
 }
 
 .button {
+  --size: 36rem;
   box-sizing: content-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 36rem;
-  height: 36rem;
+  width: var(--size);
+  height: var(--size);
   background-color: var(--button-background-color);
-  border-radius: var(--border-radius);
-  box-shadow: 2rem 2rem 8px rgb(30, 30, 30, .5);
-  transition: var(--transition);
+  border-radius: var(--radius-5);
+  box-shadow: var(--box-shadow-layer-3);
+  transition: var(--transition-background-color), var(--transition-color);
   pointer-events: all;
 }
 
@@ -66,91 +55,55 @@
 .buttonCenterIcon {
   width: 20rem;
   color: var(--button-icon-color);
-  transition: var(--transition);
+  transition: var(--transition-color);
 }
 
 .buttonFitIcon {
   width: 18rem;
   color: var(--button-icon-color);
-  transition: var(--transition);
+  transition: var(--transition-color);
 }
 
 .buttonZoomInIcon {
   width: 16rem;
   color: var(--button-icon-color);
-  transition: var(--transition);
+  transition: var(--transition-color);
 }
 
 .buttonZoomOutIcon {
   width: 16rem;
   color: var(--button-icon-color);
-  transition: var(--transition);
+  transition: var(--transition-color);
 }
 
 .overlay {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  inset: 0;
   pointer-events: none;
   overflow: hidden;
-  z-index: 1;
-}
-
-.dashboard {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 40rem;
-  gap: 27rem;
-  pointer-events: none;
-  border-top: solid 2px var(--color-gray-47);
-}
-
-.dashboardHeader {
-  display: flex;
-  flex-direction: column;
-  gap: 8rem;
-}
-
-.entityName {
-  color: var(--color-gray-3);
-  font-size: 22rem;
-  font-weight: 600;
-  line-height: 1;
-}
-
-.entityType {
-  color: var(--color-gray-11);
-  font-size: 18rem;
-  font-weight: 400;
-  line-height: 1;
+  z-index: var(--z-index-2);
 }
 
 .kpis {
-  --gap: 60rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: var(--gap);
+  display: grid;
+  grid-auto-flow: column;
+  place-content: center start;
+  gap: 60rem;
+  padding: 40rem;
+  pointer-events: none;
+  border-top: solid 1px var(--background-layer-2-secondary);
+  z-index: var(--z-index-1);
+}
+
+.kpis[data-kpi-count="0"] {
+  place-content: center;
+  height: 161rem;
+  color: var(--foreground-tertiary-color);
+  font-size: 34rem;
+  font-weight: var(--font-weight-2);
+  text-align: center;
 }
 
 .kpi {
-  --color-alarm-indicator-normal: var(--color-gray-42);
   position: relative;
-}
-
-.kpi::after {
-  content: '';
-  position: absolute;
-  width: 1rem;
-  height: 100%;
-  right: calc(var(--gap) * -0.5);
-  background-color: var(--color-gray-47);
-}
-
-.kpi:last-child:after {
-  display: none;
 }
