--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/css/colors.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/css/colors.css
@@ -2,4 +2,7 @@
 /* SPDX-License-Identifier: Apache-2.0 */
 :root {
 	--color-blue: #3f5da8;
+	/* --color-blue: #375bb7; */
+	/* --color-blue: #2c4b9a; */
+	--color-blue-rgb: 63, 93, 168;
 }
