Update dependencies, fix breaking changes

--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/app.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/app.css
@@ -136,3 +136,7 @@ body[class*="hide-appkit"]>[class*="tooltip-portal"] {
 body[class*="hide-appkit"] iot-app-kit-vis-status-timeline {
   display: none;
 }
+
+body[class*="hide-appkit"] iot-app-kit-vis-webgl-context {
+  visibility: hidden;
+}
