Fix for @iot-app-kit useTimeSeriesData hook bug, fix color mode bug, refactor for more performant data queries

--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/charts/KpiChart/styles.module.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/charts/KpiChart/styles.module.css
@@ -151,6 +151,10 @@
   color: var(--color-time);
 }
 
+.timeSection:before {
+  content: attr(data-label) " ";
+}
+
 .High {
   --color-alarm: var(--color-alarm-high);
 }
