Fix scene entity deselection bug, update UI styles, change time series refresh rate

--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/app.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/app.css
@@ -7,6 +7,10 @@
   font-weight: var(--font-weight-4);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: var(--background-layer-0);
   font-family: var(--font-sans);
