--- a/src/workspaces/cookiefactoryv3/dashboard/@iot-prototype-kit/src/components/views/PaneView/styles.module.scss
+++ b/src/workspaces/cookiefactoryv3/dashboard/@iot-prototype-kit/src/components/views/PaneView/styles.module.scss
@@ -480,7 +480,7 @@
         inset: auto 50% 30rem;
         z-index: 2;
 
-        translate: -50% 0;
+        translate: 10% 0;
 
         width: max-content;
 
@@ -593,6 +593,7 @@
         box-shadow: 0 0 var(--drop-shadow-radius) rgb(0, 0, 0, 0.3);
         border-radius: var(--border-radius);
         scale: 1;
+        margin: 5vh 20vw 0 0;
       }
 
       [data-pane-secondary] {
